check cla (#73)
* check cla

* clear code

* minor update
