# docs/swagger.json
@@ -4,6 +4,32 @@
         "contact": {}
     },
     "paths": {
+        "/v1/cla": {
+            "get": {
+                "description": "verify cla",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CLA"
+                ],
+                "summary": "verify cla",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/clavalidator.CLA"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/sig": {
             "get": {
                 "description": "list sigs",
@@ -354,9 +380,6 @@
                 "desc": {
                     "type": "string"
                 },
-                "license": {
-                    "type": "string"
-                },
                 "platform": {
                     "type": "string"
                 },
@@ -366,7 +389,10 @@
                 "sig": {
                     "type": "string"
                 },
-                "source_code": {
+                "spec_url": {
+                    "type": "string"
+                },
+                "src_rpm_url": {
                     "type": "string"
                 }
             }
@@ -498,6 +524,14 @@
                 }
             }
         },
+        "clavalidator.CLA": {
+            "type": "object",
+            "properties": {
+                "signed": {
+                    "type": "boolean"
+                }
+            }
+        },
         "controller.ResponseData": {
             "type": "object",
             "properties": {
@@ -525,18 +559,15 @@
             "type": "object",
             "required": [
                 "desc",
-                "license",
                 "pkg_name",
                 "platform",
                 "reason",
                 "sig",
-                "source_code"
+                "spec_url",
+                "src_rpm_url"
             ],
             "properties": {
                 "desc": {
-                    "type": "string"
-                },
-                "license": {
                     "type": "string"
                 },
                 "pkg_name": {
@@ -551,7 +582,10 @@
                 "sig": {
                     "type": "string"
                 },
-                "source_code": {
+                "spec_url": {
+                    "type": "string"
+                },
+                "src_rpm_url": {
                     "type": "string"
                 }
             }
